--- a/NESDevTemplate-main/VSC_NESGameTemplate/.vscode/launch.json
+++ b/NESDevTemplate-main/VSC_NESGameTemplate/.vscode/launch.json
@@ -10,8 +10,8 @@
             "name": "Debug rom with mesen",
             "romPath": "${workspaceFolder}/BUILD/blank.nes",
             "dbgPath": "${workspaceFolder}/BUILD/blank.dbg",
-            "program": "${workspaceFolder}/../MesenX/mesen.exe",
-            //"program": "${workspaceFolder}/../Mesen2/mesen.exe",
+            //"program": "${workspaceFolder}/../MesenX/mesen.exe",
+            "program": "${workspaceFolder}/../Mesen2/mesen.exe",
             "sourcePath": "${workspaceFolder}/",
             "stopOnEntry": false,
             "resetOnEntry": true
